Phone component misaligned dropdown fix in '24 (#169)

--- a/projects/angular-test-app/src/styles.scss
+++ b/projects/angular-test-app/src/styles.scss
@@ -84,3 +84,7 @@ a.mat-mdc-menu-item > mat-icon {
 .mat-mdc-form-field {
   margin: 8px 0;
 }
+
+.ngx-mat-tel-input-container button {
+  margin-top: auto;
+}
